fix: remove ProjectsAbout align-items that broke the linear

--- a/src/components/ProjectsAbout/styles.module.scss
+++ b/src/components/ProjectsAbout/styles.module.scss
@@ -51,7 +51,6 @@
       display: flex;
       gap: 4.8rem;
       flex-wrap: wrap;
-      align-items: center;
       justify-content: center;
     }
   }
